funcion de agregar una nueva materia al home